Writing slides: add conclusion

--- a/lecture-slides/writing/writing.tex
+++ b/lecture-slides/writing/writing.tex
@@ -807,4 +807,25 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}
+  \frametitle{Conclusion}
+
+  Draft, then revise. Treat writing as an optimisation problem.
+
+  \medskip
+  \pause
+
+  Always think about the target audience.
+
+  \medskip
+  \pause
+
+  Add your own flavour. Your summary should not be entirely derivative.
+
+  \medskip
+  \pause
+
+  Keep to the formal requirements. Do not plagiarise.
+\end{frame}
+
 \end{document}
